LPS-96449 Avoid to override sidebar-header since the logo inside the control panel menu is shifted to the right after visiting dynamic data list in control panel menu

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-web/src/main/resources/META-INF/resources/css/main.scss
@@ -67,10 +67,6 @@
 }
 
 .portlet-dynamic-data-lists {
-	.sidebar-header {
-		text-align: right;
-	}
-
 	.sidenav-close {
 		display: inline-block;
 	}
